Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville['Population'] # returns value of gr\n",
+    "greenville_population = greenville['Population'] # returns value given the \"Population\"\n",
     "greenville_population # 93"
    ]
   },
