--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville['Population'] # returns value given the \"Population\"\n",
+    "greenville_population = greenville['Population'] # returns value given the key \"Population\"\n",
     "greenville_population # 93"
    ]
   },
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
+    "greenville_area = green\n",
     "greenville_area # 68"
    ]
   },
