--- a/index.ipynb
+++ b/index.ipynb
@@ -342,11 +342,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Pyeongchang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 44,\n",
+       " 'Area': 1464}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities[-5]\n",
     "los_cabos_pop # 288"
    ]
   },
