--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = 'PyeongChan'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
