--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = len()\n",
     "city_count # 12"
    ]
   },
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = 'PyeongChan'\n",
+    "cities[7]['City'] = 'PyeongChang'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
