--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities[7]\n",
+    "pyeongchang_values = cities[7].values()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
