--- a/index.ipynb
+++ b/index.ipynb
@@ -431,19 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'PyeongChang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 44,\n",
-       " 'Area': 1464}"
+       "dict_values(['PyeongChang', 'South Korea', 44, 1464])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
