Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(ci)\n",
+    "pyeongchang_keys = list(cities[\n",
+    "    PeongChang\n",
+    "])\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
