--- a/index.ipynb
+++ b/index.ipynb
@@ -473,8 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(cities[\n",
-    "    PeongChang\n",
+    "pyeongchang_keys = list(cities['PeongChang'].\n",
     "])\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
