Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,8 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(cities['PeongChang'].\n",
-    "])\n",
+    "pyeongchang_keys = list(cities['PeongChang'].keys())\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
