--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = list[cities['PeongChang'].keys())\n",
+    "pyeongchang_keys = list[cities['PeongChang']\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
