--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = list[cities[7]\n",
+    "pyeongchang_keys = list[cities[7].keys()]\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
